fixed overflow ignoring padding in cheatsheet buttons

--- a/src/components/Utility/utility.scss
+++ b/src/components/Utility/utility.scss
@@ -37,15 +37,18 @@
 
 }
 
+.avaible-cheatsheets-container {
+    overflow-y: hidden;
+    overflow-x: auto;
+    width: 100%;
+}
 .avaible-cheatsheets {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    overflow-x: auto;
-    overflow-y: hidden;
     white-space: nowrap;
-
+    flex-wrap: nowrap;
     width: 100%;
 }
 
@@ -57,6 +60,7 @@
     border-radius: 1em;
     margin: 0.25em;
     transition: 0.3s;
+    
 }
 
 .avaible-cheatsheet-button:hover {
@@ -76,6 +80,10 @@
         width: calc(100% - 0.25em);
     }
     
+    .avaible-cheatsheets {
+        width: calc(100% + 3em);
+    }
+
     .cheatsheets-search {
         width: calc(100% - 2em);
     }
